// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest should render with label 1`] = `
<div>
  <div
    class="Autosuggest__container"
  >
    <div
      class="TextField__root"
    >
      <label
        class=""
        for="testAutosuggest"
      >
        <span
          class="Text__root Text__standard Text__baseline"
        >
          <span
            class=""
          >
            <strong
              class="Strong__root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-describedby="testAutosuggest-message"
        aria-expanded="false"
        aria-owns="react-autowhatever-1"
        autocomplete="off"
        class="TextField__input"
        id="testAutosuggest"
        role="combobox"
        type="text"
        value=""
      />
      <span
        class="TextField__clearField"
      >
        <div
          class="ClearField__root"
        >
          <span
            class="Icon__root"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="FieldMessage__root"
      />
    </div>
    <div
      class="Autosuggest__suggestionsContainer Autosuggest__suggestionsContainer_withLabel"
      id="react-autowhatever-1"
    />
  </div>
  <div
    class="Autosuggest__autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with mobile backdrop 1`] = `
<div>
  <div
    class="Autosuggest__container"
  >
    <div
      class="TextField__root"
    >
      <label
        class="Autosuggest__isLabelCoveredWithBackdrop LABEL_TEST_CLASS"
        for="testAutosuggest"
      >
        <span
          class="Text__root Text__standard Text__baseline"
        >
          <span
            class=""
          >
            <strong
              class="Strong__root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-describedby="testAutosuggest-message"
        aria-expanded="false"
        aria-owns="react-autowhatever-1"
        autocomplete="off"
        class="TextField__input"
        id="testAutosuggest"
        role="combobox"
        type="text"
        value=""
      />
      <span
        class="TextField__clearField"
      >
        <div
          class="ClearField__root"
        >
          <span
            class="Icon__root"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="FieldMessage__root"
      />
    </div>
    <div
      class="Autosuggest__suggestionsContainer Autosuggest__suggestionsContainer_withLabel"
      id="react-autowhatever-1"
    />
  </div>
  <div
    class="Autosuggest__autosuggestBackdrop Autosuggest__backdrop_isMobile"
  />
</div>
`;

exports[`Autosuggest should render with simple props 1`] = `
<div>
  <div
    class="Autosuggest__container"
  >
    <div
      class="TextField__root"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="testAutosuggest-message"
        aria-expanded="false"
        aria-owns="react-autowhatever-1"
        autocomplete="off"
        class="TextField__input"
        id="testAutosuggest"
        role="combobox"
        type="text"
        value=""
      />
      <span
        class="TextField__clearField"
      >
        <div
          class="ClearField__root"
        >
          <span
            class="Icon__root"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="FieldMessage__root"
      />
    </div>
    <div
      class="Autosuggest__suggestionsContainer"
      id="react-autowhatever-1"
    />
  </div>
  <div
    class="Autosuggest__autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with suggestions 1`] = `
<div>
  <div
    class="Autosuggest__container Autosuggest__containerOpen"
  >
    <div
      class="TextField__root"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="testAutosuggest-message"
        aria-expanded="true"
        aria-owns="react-autowhatever-1"
        autocomplete="off"
        class="TextField__input"
        id="testAutosuggest"
        role="combobox"
        type="text"
        value=""
      />
      <span
        class="TextField__clearField"
      >
        <div
          class="ClearField__root"
        >
          <span
            class="Icon__root"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="FieldMessage__root"
      />
    </div>
    <div
      class="Autosuggest__suggestionsContainer Autosuggest__suggestionsContainerOpen"
      id="react-autowhatever-1"
    >
      <ul
        role="listbox"
      >
        <li
          class="Autosuggest__suggestion"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
        >
          <span
            class="suggestion"
          >
            test
          </span>
        </li>
        <li
          class="Autosuggest__suggestion"
          data-suggestion-index="1"
          id="react-autowhatever-1--item-1"
          role="option"
        >
          <span
            class="suggestion"
          >
            test 2
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="Autosuggest__autosuggestBackdrop"
  />
</div>
`;
